Fix layout bug in weather information

--- a/homedisplay/display/static/css/custom_display.css
+++ b/homedisplay/display/static/css/custom_display.css
@@ -1,4 +1,7 @@
-
+.weather-main {
+  margin-left: 20px;
+  margin-bottom: 20px;
+}
 .weather .temperature-now {
   font-size: 5em;
 }
